# rust-fsnotify

./: .gitignore  Cargo.toml  README.md
src/: ffi.rs  helpers.rs  lib.rs  macros.rs
src/fsnotify/: mod.rs  operations.rs
src/linux/: mod.rs
src/osx/: mod.rs
src/win/: ffi.rs  mod.rs
